NXP-YYYYY: Cleanup / Format